--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <script src="https://cdn.jsdelivr.net/npm/react-scan/dist/auto.global.js"></script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="/favicon.ico" />
@@ -12,7 +13,7 @@
   <title>Planner</title>
 </head>
 
-<body>
+<body class="dark:bg-dark-background-c bg-sky-100">
   <div id="app"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
