--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
   <title>Planner</title>
 </head>
 
-<body class="dark:bg-dark-background-c bg-sky-100">
+<body class="transition ease-in duration-200 dark:bg-dark-background-c bg-sky-100">
   <div id="app"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
